--- a/sass/_anim.scss
+++ b/sass/_anim.scss
@@ -123,6 +123,6 @@
 
     100% {
         opacity: 0;
-        transform: translateY(1.25rem);
+        transform: translateY(1.5rem);
     }
 }
