--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -7,7 +7,7 @@
     height: 100%;
     right: -100%;
     width: 100%;
-    z-index: 1000;
+    z-index: 999;
 }
 
 .menu-half {
@@ -114,7 +114,7 @@
     height: 100vh;
     position: fixed;
     width: 100vw;
-    z-index: 1000;
+    z-index: 998;
 }
 
 #burger {
