--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -42,8 +42,9 @@ polygon.st1 {
 }
 
 #info-me {
+    display: inline-block;
     margin-left: 10%;
-    z-index: 999;
+    z-index: 666;
 
     p {
         text-shadow: 0 1px #191919;
@@ -92,7 +93,7 @@ polygon.st1 {
     left: 50%;
     opacity: 0.25;
     position: absolute;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     width: 1.5rem;
 }
 
